Included missing scrollify file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <main class="wrap">
-      <!-- <div class="overlay"></div> -->
       <section class="home panel" data-section-name="home">
         <div class="topSpacer"></div>
         <header>
@@ -252,23 +251,24 @@
                     <img src="img/svg/instagram.svg" alt="Instagram icon">
                   </a>
                 </li>
-                <li>
+                <!-- <li>
                   <p>Gaming on Steam:</p>
                   <a href="https://steamcommunity.com/id/thepiedpiper74/" target="_blank">
                     <img src="img/svg/steam.svg" alt="Steam icon">
                   </a>
-                </li>
+                </li> -->
                 <li>
                   <p>Work history on Linked In:</p>
                   <a href="https://www.linkedin.com/in/peter-schrock-092519167/" target="_blank">
                     <img src="img/svg/linkedin.svg" alt="LinkedIn icon">
                   </a>
                 </li>
-                <!-- <li>
-                  <a href="https://twitter.com/pschrock1" target="_blank">
+                <li>
+                  <p>Twitter</p>
+                  <a href="https://twitter.com/schrock_peter" target="_blank">
                     <img src="img/svg/twitter.svg" alt="Twitter icon">
                   </a>
-                </li> -->
+                </li>
               </ul>
             </div>
           </div>
@@ -288,7 +288,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/plugins/CSSPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/plugins/ScrollToPlugin.min.js"></script>
-    <script src="js/Scrollify-master/jquery.scrollify.js"></script>
+    <!-- <script src="js/Scrollify-master/jquery.scrollify.js"></script> -->
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
