minor change to index.html

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/plugins/CSSPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/plugins/ScrollToPlugin.min.js"></script>
-    <!-- <script src="js/Scrollify-master/jquery.scrollify.js"></script> -->
+    <script src="js/Scrollify-master/jquery.scrollify.js"></script>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
