updated instagram account

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </li>
                 <li>
                   <p>Photos on Instagram:</p>
-                  <a href="https://www.instagram.com/miskit74/" target="_blank">
+                  <a href="https://www.instagram.com/pschrockfewd" target="_blank">
                     <img src="img/svg/instagram.svg" alt="Instagram icon">
                   </a>
                 </li>
@@ -264,7 +264,7 @@
                   </a>
                 </li>
                 <li>
-                  <p>Twitter</p>
+                  <p>Comments on Twitter:</p>
                   <a href="https://twitter.com/schrock_peter" target="_blank">
                     <img src="img/svg/twitter.svg" alt="Twitter icon">
                   </a>
