Updated page data

--- a/index.html
+++ b/index.html
@@ -81,17 +81,19 @@
                 <li>SASS</li>
                 <li>JavaScript</li>
                 <li>jQuery</li>
-                <li>React</li>
-                <li>Bootstrap</li>
               </ul>
             </div>
             <div class="learning">
               <h3>Learning</h3>
               <ul>
+                <li>Node.js</li>
+                <li>React</li>
+                <li>Nuxt</li>
+                <li>Vue</li>
+                <li>Ember</li>
+                <li>Bootstrap</li>
                 <li>PHP</li>
-                <li>Python</li>
                 <li>MySQL</li>
-                <li>Android</li>
                 <li>Soon to be more...</li>
               </ul>
             </div>
@@ -218,7 +220,7 @@
       <section class="contact panel" data-section-name="contact">
         <div class="container">
           <h1>Contact</h1>
-          <div class="">
+          <div>
             <p>If you would like to reach out and contact me, please feel free to send me a message.</p>
           </div>
           <div class="contact-wrap">
