updated links to portfolio and some bug fixes

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                       card.
                     </p>
                     <p><span>Grade: </span>Exceeds Expectation</p>
+                    <div class="button">
+                      <a href="https://pschrock.github.io/TechDegree-Project-08">
+                        <p>Click to view</p>
+                      </a>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -141,6 +146,11 @@
                       that would randomly select one and the player had to guess the phrase.
                     </p>
                     <p><span>Grade: </span>Exceeds Expectation</p>
+                    <div class="button">
+                      <a href="https://pschrock.github.io/TechDegree-Project-06">
+                        <p>Click to view</p>
+                      </a>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -157,6 +167,11 @@
                       in HTML.
                     </p>
                     <p><span>Grade: </span>Exceeds Expectation</p>
+                    <div class="button">
+                      <a href="https://pschrock.github.io/TechDegree-Project-03">
+                        <p>Click to view</p>
+                      </a>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -173,7 +188,11 @@
                       of the images in the library. We also created a search function
                       that looked up photos in the library.
                     </p>
-                    <p><span>Grade: </span>Exceeds Expectation</p>
+                    <div class="button">
+                      <a href="https://pschrock.github.io/TechDegree-Project-05">
+                        <p>Click to view</p>
+                      </a>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -190,6 +209,11 @@
                       media queries in CSS
                     </p>
                     <p><span>Grade: </span>Exceeds Expectation</p>
+                    <div class="button">
+                      <a href="https://pschrock.github.io/TechDegree-Project-02">
+                        <p>Click to view</p>
+                      </a>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -206,6 +230,11 @@
                       also learned about local storage and used it to save settings.
                     </p>
                     <p><span>Grade: </span>Exceeds Expectation</p>
+                    <div class="button">
+                      <a href="https://pschrock.github.io/TechDegree-Project-07">
+                        <p>Click to view</p>
+                      </a>
+                    </div>
                   </div>
                 </li>
               </ul>
